# Graphics

./: .gitignore  CMakeLists.txt  README.md  main.cpp
ecg/: ecg.frag
framework/: application.cpp  application.hpp
menger/: menger.cpp  menger.hpp
sierpinski/: main.cpp  sierpinski.cpp  sierpinski.hpp  square.cpp  square.hpp  squares.cpp  squares.hpp
sierpinski-triangle/: main.cpp  sierpinski_triangle.cpp  sierpinski_triangle.hpp  triangle.cpp  triangle.hpp  triangles.cpp  triangles.hpp
